# teleop_xr

./: README.md  pyproject.toml
docs/plans/: 2026-01-28-camera-view-config-design.md
examples/webots/controllers/inverse_kinematics/: inverse_kinematics.py
teleop/: __init__.py  index.html  video_stream.py
teleop/ros2/: __main__.py
teleop_xr/: __init__.py  messages.py
teleop_xr/basic/: __main__.py
teleop_xr/ik/: controller.py  robot.py  solver.py
teleop_xr/ik/robots/: openarm.py
teleop_xr/ros2/: __main__.py
teleop_xr/ros2_ik/: __main__.py
teleop_xr/utils/: jacobi_robot_ros.py
teleop_xr/xarm/: __main__.py
tests/: test_camera_views.py  test_video_source.py
webxr/src/: index.ts  panels.ts  teleop_system.ts  video.ts
webxr/ui/: camera.uikitml  teleop.uikitml
