[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleop_xr"
version = "0.1.0"
description = "Turns your phone into a robot arm teleoperation device by leveraging the WebXR API"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Spes Robotics", email = "contact@spes.ai" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "transforms3d",
  "pytest",
  "requests",
  "websocket-client",
  "aiortc",
  "opencv-python",
  "av",
]

[project.urls]
Documentation = "https://github.com/SpesRobotics/teleop"
Source = "https://github.com/SpesRobotics/teleop"
Tracker = "https://github.com/SpesRobotics/teleop/issues"

[project.optional-dependencies]
utils = ["pin"]

[tool.setuptools.packages.find]
include = ["teleop_xr*"]

[tool.setuptools.package-data]
teleop_xr = ["cert.pem", "key.pem", "index.html", "assets/*", "utils/lite6.urdf"]
